Fixed the alignment issue with last two buttons

--- a/Assignment CSS/Question3/styles.css
+++ b/Assignment CSS/Question3/styles.css
@@ -17,6 +17,7 @@
    border-radius: 6px;
    text-decoration: none;
    display: inline-block;
+   vertical-align: top;
 }
 .buttons-primary:hover{
     background-color: lightblue;
@@ -29,6 +30,7 @@
     border-radius: 6px;
     text-decoration: none;
     display: inline-block;
+    vertical-align: top;
 }
 .buttons-secondary:active{
     background-color: yellow;
@@ -40,4 +42,5 @@
     border-radius: 6px;
     text-decoration: none;
     display: inline-block;
+    vertical-align: top;
 }
